fixed uneven spacing in events section

--- a/css/about.css
+++ b/css/about.css
@@ -123,7 +123,7 @@
   height: 100%;
   width: 100%;
   margin: 0;
-  padding-top: 5%;
+  padding-top: 0%;
   padding-bottom: 10%;
 }
 
@@ -135,7 +135,7 @@
 }
 
 @media screen and (max-width: 575px) {
-  .dektop-helptext {
+  .desktop-helptext {
     display: none;
   }
   .mobile-helptext {
@@ -146,4 +146,8 @@
     text-align: center;
     height: 90vh;
   }
+}
+
+.eventHeader {
+  padding-top: 5%;
 }
